Correccion de errores, revision de interfazes